--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   name="frozen divine"
   content="Author: Rishika Garg, Illustrator: Font Awesome and Flat Icon, Category: Food Application, Open Source: Yes"
 />
-<meta name="description" content="Food Ordering Website. The 'MOMOMIA' has
+<meta name="description" content="Food Ordering Website. The 'FROZEN DIVINE' has
 been practiced to override the prevalent problems in manual systems. This
 website is compatible to finalize and, in some cases, reduces the
 difficulties faced by this existing system.>
@@ -30,6 +30,9 @@ difficulties faced by this existing system.>
   href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Ubuntu:wght@400;500;700&display=swap"
   rel="stylesheet"
 />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Comfortaa:wght@500&family=Dosis:wght@300;400&family=Inter:wght@500&family=Montserrat+Alternates:wght@200&family=Montserrat:wght@200&family=Nerko+One&family=Sono&display=swap" rel="stylesheet"> 
 
 <!-- CDN FONTS  -->
 <link href="https://fonts.cdnfonts.com/css/elinga" rel="stylesheet" />
@@ -70,14 +73,14 @@ difficulties faced by this existing system.>
     <ul class="px-0 mx-0">
       <img
         src="./images/icecreamlogo.png"
-        height="80px"
-        width="80px"
+        height="75px"
+        width="75px"
         alt="navbar-logo"
         
       />
     </ul>
     <a class="navbar-brand" href="index.html">FROZEN DIVINE</a>
-    <!--         <a style ="font-size :class="navbar-brand" href="#">MOMOMIA</a> -->
+    <!--         <a style ="font-size :class="navbar-brand" href="#"></a> -->
     <button
       class="navbar-toggler"
       type="button"
@@ -178,7 +181,7 @@ difficulties faced by this existing system.>
             />
           </div>
           <div class="item-content">
-            <h2 class="card-title">American Fast Food</h2>
+            <h2 class="card-title">Chinese Fast Food</h2>
           </div>
         </div>
       </div>
@@ -416,11 +419,11 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      Cassata
+                      Butter-scoth Delight
                       <span>
                         <img
                           class="nonVegIcon"
-                          src="./images/non-veg.webp"
+                          src="./images/veg.webp"
                           alt="non-veg icon"
                         />
                       </span>
@@ -448,7 +451,7 @@ difficulties faced by this existing system.>
                       <span>
                         <img
                           class="nonVegIcon"
-                          src="./images/non-veg.webp"
+                          src="./images/veg.webp"
                           alt="non-veg icon"
                         />
                       </span>
@@ -472,11 +475,11 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      choco-glazed cups
+                      Choco-glazed cups
                       <span>
                         <img
                           class="nonVegIcon"
-                          src="./images/non-veg.webp"
+                          src="./images/veg.webp"
                           alt="non-veg icon"
                         />
                       </span>
@@ -500,11 +503,11 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                     Paan-candy Kulfi
+                     Paan-candy
                       <span>
                         <img
                           class="nonVegIcon"
-                          src="./images/non-veg.webp"
+                          src="./images/veg.webp"
                           alt="non-veg icon"
                         />
                       </span>
@@ -529,12 +532,12 @@ difficulties faced by this existing system.>
 
           <div class="col-sm-6 col-12">
             <div class="card">
-              <h2 class="card-title">Fried Momos</h2>
+              <h2 class="card-title">All Time Favorites</h2>
               <div class="card-body">
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      Veggie Fried Momo
+                     Classic Vanilla
                       <span>
                         <img
                           class="vegIcon"
@@ -562,7 +565,7 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      Paneer Fried Momo
+                     Cotton Candy
                       <span>
                         <img
                           class="vegIcon"
@@ -590,7 +593,7 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      Mushroom Fried Momo
+                      Golden Ribbon
                       <span>
                         <img
                           class="vegIcon"
@@ -618,7 +621,7 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      Corn Cheese Fried Momo
+                     Mississippi Mud
                       <span>
                         <img
                           class="vegIcon"
@@ -646,11 +649,11 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      Chicken Fried Momo
+                      Berry Strawberry
                       <span>
                         <img
                           class="nonVegIcon"
-                          src="./images/non-veg.webp"
+                          src="./images/veg.webp"
                           alt="non-veg icon"
                         />
                       </span>
@@ -674,11 +677,11 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      Chicken Schezwan Fried Momo
+                     Alphonso Mango
                       <span>
                         <img
                           class="nonVegIcon"
-                          src="./images/non-veg.webp"
+                          src="./images/veg.webp"
                           alt="non-veg icon"
                         />
                       </span>
@@ -702,11 +705,11 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      Chicken Cheese Fried Momo
+                      Caramel Kitkat
                       <span>
                         <img
                           class="nonVegIcon"
-                          src="./images/non-veg.webp"
+                          src="./images/veg.webp"
                           alt="non-veg icon"
                         />
                       </span>
@@ -730,11 +733,11 @@ difficulties faced by this existing system.>
                 <div class="row foodItem">
                   <div class="col-9 foodItemName">
                     <p>
-                      Fish Fried Momo
+                      Vegan Vanilla
                       <span>
                         <img
                           class="nonVegIcon"
-                          src="./images/non-veg.webp"
+                          src="./images/veg.webp"
                           alt="non-veg icon"
                         />
                       </span>
@@ -2095,21 +2098,21 @@ difficulties faced by this existing system.>
   <div class="container">
     <div class="row">
       <div class="col-9 footerHeadingCol">
-        <h2>FROZEN DIVINE</h2>
+        <h2 style="color: white;"> FROZEN <span style="color: magenta;">DIVINE</span></h2>
       </div>
 
       <div class="col-3 socialMedia">
         <a href="https://www.facebook.com/" class="socialMediaIcon">
           <span><i class="fab fa-facebook-f"></i></span
         ></a>
-        <a href="https://www.twitter.com/" class="socialMediaIcon">
+        <a href="https://twitter.com/armansid6783" class="socialMediaIcon">
           <span><i class="fab fa-twitter"></i></span
         ></a>
-        <a href="https://www.instagram.com/" class="socialMediaIcon">
+        <a href="https://www.instagram.com/frozen_divine/tagged/" class="socialMediaIcon">
           <span><i class="fab fa-instagram"></i></span
         ></a>
         <a
-          href="https://www.linkedin.com/in/rishika-garg05/"
+          href="https://www.linkedin.com/in/arman-siddiqui-07495a226/"
           target="_blank"
           class="socialMediaIcon"
         >
@@ -2128,6 +2131,10 @@ difficulties faced by this existing system.>
         <!-- <a class="footer_clickable" href="tel:+919871198882">Contact Us</a> -->
         <a class="footer_clickable" href="./contactus.html">Contact Us</a>
       </p>
+    </div>
+    <div class = "team">
+      We feel obliged to show the entire team that worked day and night to help accomplish this project
+<a href="/team.html">The Team</a>
     </div>
 
     <div class="row copyrightRow">
